# wikipedia-api-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: endpoints.md
src/: wiki_wrapper.py
src/wiki_wrapper_adamn11/: errors.py  wiki_wrapper.py
tests/: test_wiki_wrapper.py
